<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/register_button_signup"
        android:background="@color/background"
        android:clickable="true"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/signup_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/input_name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name_signup"
                    android:inputType="text"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_uid_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_name_signup"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/input_uid_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_uid_signup"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_uid_signup"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/input_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password_signup"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_password_signup"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/input_address_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address_signup"
                    android:inputType="text"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_address_signup"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/input_phone_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_signup"
                    android:inputType="phone"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/pregnant_text_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_phone_signup"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/is_pregnant"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pregnant_text_signup"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/textColor" />

                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no"
                    android:textColor="@color/textColor" />
            </RadioGroup>

            <TextView
                android:id="@+id/input_conceivedate_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio_group_signup"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:text="@string/hint_conceivedate_signup"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/input_duedate_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_conceivedate_signup"
                android:layout_marginTop="18dp"
                android:padding="4dp"
                android:text="@string/hint_duedate_signup"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/register_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="@color/colorAccent"
        android:text="@string/register_button_text"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>

