<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iitr.cfd.aasha.activities.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/input_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_uid"
            android:inputType="number"
            android:maxLength="12" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_uid"
        android:padding="10dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up_message"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:text="@string/submit_button_text" />

    <TextView
        android:id="@+id/sign_up_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/sign_up_text_view" />

    <FrameLayout
        android:id="@+id/sign_up_frag_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:translationZ="10dp" />

</RelativeLayout>
